(fix): engine#956 - table overflow

--- a/src/app/modules/analytics/v2/components/table/table.component.scss
+++ b/src/app/modules/analytics/v2/components/table/table.component.scss
@@ -85,6 +85,7 @@
         display: flex;
         > * {
           display: inline-block;
+          max-width: 200px;
         }
 
         i {
